Changes
=======

2.1.3 (unreleased)
------------------

- Nothing changed yet.


2.1.2 (2013-07-05)
------------------

- Catch errors in viewlet to prevent editor from breaking completely. (#12530)


2.1.1 (2013-07-01)
------------------

- Include "to top" links for foldable form groups into the markup (#12255).


2.1.0 (2013-05-29)
------------------

- Perform search on page load only inside workingcopy (#12404).


2.0 (2013-04-23)
----------------

- Initial release.
