@@ -4,7 +4,8 @@ Changes
 2.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Performance improvement: Determine globs only once per block, not everytime
+  again for each rule. (#12555)
 
 
 2.1.2 (2013-07-05)
